[gd_scene load_steps=3 format=3 uid="uid://dxlvlw3nvfigr"]

[ext_resource type="Script" path="res://ui/tooltip_emitter_shaped.gd" id="1_tdgew"]
[ext_resource type="Script" path="res://ui/mouse_watcher.gd" id="2_cwpns"]

[node name="TooltipEmitter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_tdgew")
_tooltip = "[color=aquamarine]Soul Fragment[img=10x13]res://assets/icons/soul_fragment_blue_icon.png[/img] (%d)[/color]\\nSpent to buy new coins.\\nObtain as many as you can.\""

[node name="MouseWatcher" type="Node2D" parent="." node_paths=PackedStringArray("watched")]
script = ExtResource("2_cwpns")
watched = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 12, 0, 12, 11, 0, 11)

[connection signal="mouse_entered" from="MouseWatcher" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MouseWatcher" to="." method="_on_mouse_exited"]
